@@ -1,4 +1,7 @@
 0.5.0
+* nci: new module (n-Tree cell iterator) (2007-03-13)
+* nct: new module (n-Tree cell tree) (2007-03-13)
+* ncn: new module (n-Tree cell node) (2007-03-13)
 * nni: new module (n-Tree base iterator) (2007-03-05)
 * nnt: new module (n-Tree base module) (2007-03-04)
 * nnn: new module (n-Tree base node) (2007-03-04)
